2012-05-14  Charlie Zender  <zender@uci.edu>

	* Add scrutable hint for ncap2 -A append errors, and note in docs

2012-04-15  Charlie Zender  <zender@uci.edu>

	* Pass NC_SIZEHINT_DEFAULT as initialsz to nco__create()

	* Replace all nco_create() calls with nco__create()

	* NCO 4.2.0 release procedure:
 	Changes since nco-4_1_0: ncra -y ttl, %i fmt, ncwa NaN, nc__open
	cd ~/nco;cvs tag -d nco-4_2_0;cvs tag -d nco-4_2_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.0 release"
	cvs tag -c nco-4_2_0;cvs tag -c nco-4_2_0-1

2012-04-14  Charlie Zender  <zender@uci.edu>

	* Replace all nco_open() calls with nco_fl_open()

	* Document --bfr_sz_hnt

	* Functionalize nc__open() clause as nco_fl_open()

2012-04-04  Charlie Zender  <zender@uci.edu>

	* Deprecate nco_open() in ncks in favor of nco__open() since
	latter is equivalent to former with default arguments.

2012-04-03  Charlie Zender  <zender@uci.edu>

	* Add --bfr_sz_hnt option and nco__open() to ncks

2012-03-30  Charlie Zender  <zender@uci.edu>

	* ncks now prints variables of type NC_INT with %i instead of %li
	formatting. This fixes TODO nco1040.

	* Fix fundamental mistake in use of memset() in	nco_set_long()
	Buggy method tried to fill tally array with ones quickly
	Revert to slower but obviously correct array deferencing to fill tally
	Hard to believe this bug did not cause more errors
	This fixes TODO nco1039. Thanks to Ken5746 for reporting this.

	* Modify and test NC_FLOAT portion of nco_var_avg() for	NaN-compatibility
	Verify that ncwa will work with missing value = NaN with this algorithm

	* Clean-up nco_var_avg.c to prepare for NaN-handling

2012-03-29  Charlie Zender  <zender@uci.edu>

	* NCO 4.1.0 release procedure:
 	Changes since nco-4_0_9: sorts/maps, MD5, chmod, NaNs, MM3
	cd ~/nco;cvs tag -d nco-4_1_0;cvs tag -d nco-4_1_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.1.0 release"
	cvs tag -c nco-4_1_0;cvs tag -c nco-4_1_0-1

2012-03-23  Charlie Zender  <zender@uci.edu>
