@@ -1,4 +1,4 @@
-<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.686 2012-05-14 23:13:21 zender Exp $
+<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.687 2012-05-16 15:55:15 zender Exp $
 Purpose: NCO homepage
 
 URL:
@@ -608,6 +608,7 @@ World peace?
 Stride works with DAP?;
 netCDF4 groups;
 <li><b>NCO 4.2.0</b>: (<i>In Progress, features already in beta include the following</i>)
+<tt>ncecat</tt> "fixes" auxiliary coordinates and bounds;
 <tt>ncks</tt> use <tt>nc__open</tt>, format <tt>NC_INT</tt> with <tt>%i</tt>;
 <tt>ncra -y ttl</tt> fix;
 <tt>ncwa -y add</tt> NaN support;
